# MiniRT

./: .gitignore  Makefile  README.md
.github/workflows/: TestAction.yml
includes/: Colors.h  Colors.hpp  Tuples.h
libs/libft/: Makefile
src/: main.c
src/Tuples/: Addition.c  Cross_Product.c  Dot_Product.c  Magnitude.c  Negating.c  Normalization.c  Scalar_Division.c  Scalar_Multiplication.c  Subtraction.c  Tuples.c
tests/: CMakeLists.txt
tests/my_tests/: Tests_Tuples.cpp  Tuples.cpp
